<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageViewMrzen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/mrzen" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/greenLight"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="@string/hint_name"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="@string/hint_name"
        android:hint="@string/hint_psswd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonChooseTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/white"
        android:background="@drawable/green_background"
        android:onClick="onClickCreateOrder"
        android:text="@string/button_choose_tea" />

</LinearLayout>