<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/greenDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonGreenTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:textSize="20sp"
            android:checked="true"
            android:onClick="onClickChangeDrink"
            android:text="@string/green_tea"/>

        <RadioButton
            android:id="@+id/radioButtonBlackTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="onClickChangeDrink"
            android:text="@string/black_tea"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additions"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/greenDark"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:text="@string/milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/brown"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkBoxSugar"/>

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:text="@string/sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/brown"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"/>

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:text="@string/lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/brown"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/greenDark"
        android:text="@string/choose_drink"
        app:layout_constraintTop_toBottomOf="@id/checkBoxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerGreenTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/brown"
        android:textStyle="bold"
        android:entries="@array/types_of_green_tea"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerBlackTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/brown"
        android:textStyle="bold"
        android:entries="@array/types_of_black_tea"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/button_make_order"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:onClick="onClickSendOrder"
        android:contentDescription="@string/make_order"
        android:src="@drawable/button_tea"
        app:layout_constraintTop_toBottomOf="@id/spinnerGreenTea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>